--- a/app/views/people/show.html.erb
+++ b/app/views/people/show.html.erb
@@ -19,7 +19,8 @@
 
 <ul class="emails_list">
   <% @person.email_addresses.each do |email| %>
-    <li><%= email.address %> <%= link_to('edit', edit_email_address_path(email)) %></li>
+    <li><%= email.address %> <%= link_to('edit', edit_email_address_path(email)) %>
+        <%= link_to 'delete', email_address_path(email), method: :delete %></li>
   <% end %>
 </ul>
 
